fix: quote sign

--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
           <h1 class="advice-card-header">
             ADVICE # <span id="advice_id">01</span>
           </h1>
-          <p id="advice_message" class="advice-card-message">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+          <p class="advice-card-message">
+            <span>&ldquo;</span>
+            <span id="advice_message">Don't worry, be Happy!</span>
+            <span>&rdquo;</span>
           </p>
           <picture class="advice-card-divider">
             <source
