feat: google adscense script

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     />
     <title>Frontend Mentor | Advice generator app</title>
     <link rel="stylesheet" href="./style.css" />
+    <!-- Script: Google AdScense -->
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3692731414234242"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <main
